--- a/setup.sty
+++ b/setup.sty
@@ -6,7 +6,7 @@
 \usepackage{enumitem}
 \usepackage{tikz}
 \usetikzlibrary{decorations.pathreplacing} % for angle arc
-\usetikzlibrary{angles, quotes, calc} % for drawing angles
+\usetikzlibrary{angles, quotes, calc, positioning, trees} % for drawing angles
 \usepackage{tikz-cd}
 \usepackage{booktabs}
 \usepackage{cancel}
