--- a/Second Year/Algoritmi/Algoritmi.tex
+++ b/Second Year/Algoritmi/Algoritmi.tex
@@ -2312,7 +2312,7 @@ Per trovare il mediano utilizzando un heap binomiale, è necessario seguire alcu
 \\
 In alternativa, un approccio come l'algoritmo di selezione del k-esimo elemento potrebbe essere utilizzato in combinazione con l'heap binomiale per trovare il mediano in modo più efficiente. 
 
-\subsubsection{RB-Alberi e Euristiche}
+\subsubsection{RB-Alberi e Search Closest}
 
 Se in un RB-Albero non dobbiamo cercare la chiave precisa ma la chiave più vicina dobbiamo cercare di utilizzare l'RB Albero
 in modo tale da poter usare la potenza del suo ordinamento.
